# paranoid-vector

./: CMakeLists.txt  README.md  paranoia_allocator.h  paranoia_pool.cpp  paranoia_pool.h  paranoid_vector.h  x.cpp
include/: paranoia_allocator.h  paranoia_pool.h  paranoid_vector.h  util.h
src/: paranoia_pool.cpp  unit_tests.cpp  util.cpp
src/paranoid_malloc_free/: CMakeLists.txt  paranoia_pool_real.cpp  paranoia_pool_real.h  paranoid_malloc_free.cpp  real_allocator.h  real_heap_funcs.cpp  real_heap_funcs.h  test_paranoid_malloc_free.cpp
